--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,48 @@
 					</div>
 				</div>
 				<div class="start-overlay">
-					<div class="next-btn">NEXT</div>
+					<div class="next-btn">
+						<img src="images/next.png" style="width: 100%; height: 100%;"/>
+					</div>
 					<div class="start-btn">START</div>
-					<div></div>
+				</div>
+			</section>
+
+			<section style="width: 100%; margin-left: 0;left: 0;">
+				<div class="container">
+					<div class="yes-no-dialog">
+						<div class="ynd-content">Kamu telah menyelesaikan semua quiz yang diberikan!</div>
+						<div class="ynd-content">Score kamu adalah 10/10.</div>
+						<div class="btn-yes-no-container">
+							<div class="yes-btn">HOME</div>
+						</div>
+					</div>
+				</div>
+				<div class="start-overlay">
+					<div class="yes-no-dialog">
+						<div class="ynd-content">Wahh hebat! Kamu sudah menyelesaikan bab "Animals". Mau mencoba menyelesaikan quiz?</div>
+						<div class="btn-yes-no-container">
+							<div class="yes-btn">Yes</div>
+							<div class="no-btn">No</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section style="width: 100%; margin-left: 0;left: 0;">
+				<div class="container">
+				</div>
+				<div class="start-overlay">
+					<div class="score-display">
+						10 / 10
+					</div>
+					<div style="margin-left: 10px;" class="image-box">
+						<img src="images/Bear_1.jpg" class="img-style-quiz"/>
+					</div>
+					<img class="direct-img" src="images/direction.png">
+					<div class="hint-dialog">
+						Klik kartunya untuk melihat option jawabannya ya.
+					</div>
 				</div>
 			</section>
 			
