--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,8 @@
 					</div>
 					<div class="start-btn">START</div>
 				</div>
+				<img class="false-icon icon-style" src="images/false.png"/>
+				<img class="true-icon icon-style" src="images/true.png"/>
 			</section>
 
 		</article>
