--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,26 @@
 		<article class="deck">
 
 			<section>
-				<h1>Hello World</h1>
+				<h1>Pembelajaran bahasa Inggris</h1>
+				<p>Alvira ( xx xxx xxxx)</p>
+				<p>Christian ( xx xxx xxxx)</p>
+				<p>Steven Kangga ( xx xxx xxxx)</p>
 			</section>
 
+			<section>
+				<h3>Penguasaan bahasa asing merupakan salah satu skill yang penting untuk dimiliki dewasa ini.</h3>
+				<h3>Manfaat mempelajari bahasa asing diantaranya:</h3>
+				<ul>
+					<li>Memperluas lingkaran sosial</li>
+					<li>Membuka peluang ke jenjang karir yang lebih tinggi</li>
+					<li>Meningkatkan kemampuan otak</li>
+					<li>Meningkatkan percaya diri</li>
+					<li>Mengasah kemampuan pengambilan keputusan</li>
+					<li>Memperdalam pemahaman akan budaya lain</li>
+					<li>Mempermudah komunikasi saat mengunjungi negara lain</li>
+				</ul>
+			</section>
+			
 			<section style="width: 100%; margin-left: 0;left: 0;">
 				<div id="learn-container" class="container">
 					<div id="yes-no" class="yes-no-dialog">
